--- a/views/index.twig
+++ b/views/index.twig
@@ -47,7 +47,7 @@
              class="rounded-lg mb-4">
         <h3 class="text-2xl font-bold mb-2">Postacie</h3>
         <p class="mb-4">Poznaj Froda, Gandalfa, Aragorna, Legolasa, Golluma i wielu innych bohaterów Śródziemia.</p>
-        <a href="postacie.html" class="inline-block bg-green-800 text-white px-4 py-2 rounded hover:bg-green-700">
+        <a href="postacie.html" class="inline-block bg-black text-white px-4 py-2 rounded hover:bg-green-700">
           Przejdź do Postaci
         </a>
       </div>
@@ -57,7 +57,7 @@
              class="rounded-lg mb-4">
         <h3 class="text-2xl font-bold mb-2">Części</h3>
         <p class="mb-4">Trylogia składa się z trzech części – od Drużyny Pierścienia po Powrót Króla.</p>
-        <a href="czesci.html" class="inline-block bg-green-800 text-white px-4 py-2 rounded hover:bg-green-700">
+        <a href="czesci.html" class="inline-block bg-black text-white px-4 py-2 rounded hover:bg-green-700">
           Przejdź do Części
         </a>
       </div>
