--- a/views/layout.twig
+++ b/views/layout.twig
@@ -12,13 +12,14 @@
   </head>
 
   <body class="bg-gray-100 text-gray-900 font-sans">
-    <header class="bg-green-900 text-white p-6 shadow-lg">
+    <header class="bg-black text-white p-6 shadow-lg">
       <div class="container mx-auto flex justify-between items-center">
         <h1 class="text-3xl font-bold">Władca Pierścieni</h1>
         <nav>
           <ul class="flex space-x-6 text-lg">
             <li>
               <a
+                class="hover:bg-green-700"
                 href="/"
                 hx-get="/"
                 hx-swap="innerHTML transition:true"
@@ -30,6 +31,7 @@
             </li>
             <li>
               <a
+                class="hover:bg-green-700"
                 href="/characters"
                 hx-get="/characters"
                 hx-swap="innerHTML transition:true"
@@ -40,7 +42,8 @@
                 >Postacie</a>
             </li>
             <li>
-              <a 
+              <a
+                class="hover:bg-green-700"
                 href="/about" 
                 hx-get="/about" 
                 hx-swap="innerHTML transition:true"
@@ -59,7 +62,7 @@
       {% block body %}{% endblock %}
     </main>
 
-    <footer class="bg-green-900 text-white text-center p-6 mt-12">
+    <footer class="bg-black text-white text-center p-6 mt-12">
       <p>&copy; 2025 Strona fanowska "Władcy Pierścieni" – stworzona z miłości do książek Tolkiena.</p>
     </footer>
   </body>
