--- a/views/characters.twig
+++ b/views/characters.twig
@@ -43,7 +43,7 @@
             <tr class="hover:bg-green-100 cursor-pointer">
               <td class="px-6 py-4 whitespace-nowrap">
                 <div class="text-sm text-gray-900">
-                  <a href="/characters/{{character.id}}">
+                  <a href="/characters/{{character.id}}" data-turbo-prefetch="true">
                     {{ character.name }}
                   </a>
                 </div>
