--- a/views/cart.twig
+++ b/views/cart.twig
@@ -4,6 +4,17 @@
 {% endblock %}
 
 {% block main %}
+
+<section hidden>
+    <turbo-frame id="cart-success">
+        <a  href="/products" data-turbo-frame="cart-success" class="cursor-pointer text-white font-bold text-right">
+            <div class="fixed bottom-6 text-xl right-6 bg-green-500 text-white px-8 py-6 rounded-lg shadow-lgz-50">
+                Produkt dodany do koszyka
+            </div>
+        </a>
+    </turbo-frame>
+</section>
+
 <section class="container mx-auto px-4 py-12 max-w-4xl">
 <h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Twój koszyk</h2>
 <div class="bg-white shadow rounded-xl overflow-hidden">
