--- a/views/layout.twig
+++ b/views/layout.twig
@@ -32,6 +32,9 @@
     </div>
   </header>
 
+  <!-- Toast -->
+  <div id="cart-success" class="fixed bottom-6 text-xl right-6"></div>
+
   {% block main %}{% endblock %}
 
   <!-- Stopka -->
