--- a/views/cart.twig
+++ b/views/cart.twig
@@ -1,40 +1,30 @@
 {% extends 'layout.twig' %}
 
-{% block head %}
-{% endblock %}
+{% block head %}{% endblock %}
 
 {% block main %}
+	<section class="container mx-auto px-4 py-12 max-w-4xl">
+		<h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Twój koszyk</h2>
+		<div class="bg-white shadow rounded-xl overflow-hidden">
+			<div class="divide-y">
+				{% for product in cart.products %}
+					<div class="p-6 flex items-center justify-between">
+						<div class="flex items-center gap-4">
+							<img src="{{ product.image }}" alt="Słuchawki" class="w-16 h-16 rounded-md object-contain">
+							<div>
+								<h3 class="text-lg font-semibold text-gray-800">{{ product.title }}</h3>
+								<p class="text-gray-600 text-sm">Ilość:
+									{{  product.count }}</p>
+							</div>
+						</div>
+						<p class="text-lg font-bold text-gray-800">{{  product.price }}zł</p>
+					</div>
+				{% endfor %}
+				<div class="p-6 flex justify-between items-center bg-gray-50">
+					<p class="text-xl font-semibold text-gray-800">Suma:</p>
+					<p class="text-xl font-bold text-gray-800">{{ cart.sum }}zł</p>
+				</div>
+			</div>
+		</section>
+	{% endblock %}
 
-<section hidden>
-    <turbo-frame id="cart-success">
-        <a  href="/products" data-turbo-frame="cart-success" class="cursor-pointer text-white font-bold text-right">
-            <div class="fixed bottom-6 text-xl right-6 bg-green-500 text-white px-8 py-6 rounded-lg shadow-lgz-50">
-                Produkt dodany do koszyka
-            </div>
-        </a>
-    </turbo-frame>
-</section>
-
-<section class="container mx-auto px-4 py-12 max-w-4xl">
-<h2 class="text-3xl font-bold text-gray-800 mb-8 text-center">Twój koszyk</h2>
-<div class="bg-white shadow rounded-xl overflow-hidden">
-    <div class="divide-y">
-    {% for product in cart.products %}
-        <div class="p-6 flex items-center justify-between">
-            <div class="flex items-center gap-4">
-            <img src="{{ product.image }}" alt="Słuchawki" class="w-16 h-16 rounded-md object-cover">
-            <div>
-                <h3 class="text-lg font-semibold text-gray-800">{{ product.title }}</h3>
-                <p class="text-gray-600 text-sm">Ilość: {{  product.count }}</p>
-            </div>
-            </div>
-            <p class="text-lg font-bold text-gray-800">{{  product.price }} zł</p>
-        </div>
-    {% endfor %}
-    <div class="p-6 flex justify-between items-center bg-gray-50">
-    <p class="text-xl font-semibold text-gray-800">Suma:</p>
-    <p class="text-xl font-bold text-gray-800">{{ cart.sum }} zł</p>
-    </div>
-</div>
-</section>
-{% endblock %}
