--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -9,12 +9,10 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/var/www/html/src/Controller/ProductController.php</code></li>
-        <li>Your template at <code>/var/www/html/templates/product/index.html.twig</code></li>
-    </ul>
+    {% for product in products %}
+        {{ product.name }}
+    {% endfor %}
+
 </div>
 {% endblock %}
