--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -12,6 +12,18 @@
 
     {% for product in products %}
         {{ product.name }}
+
+        <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition">
+            <img src="http://localhost:1337{{ product.image.url }}" alt="" class="w-full h-48 object-contain" />
+            <div class="p-4">
+                <h3 class="text-lg font-semibold mb-2">{{ product.name }}</h3>
+                <p class="text-indigo-600 font-bold text-xl mb-4">{{ product.price }} zł</p>
+                <button class="w-full bg-sky-800 text-white py-2 rounded hover:bg-indigo-700 transition">
+                    Dodaj do koszyka
+                </button>
+            </div>
+        </div>
+
     {% endfor %}
 
 </div>
