--- a/templates/products/index.html.twig
+++ b/templates/products/index.html.twig
@@ -46,9 +46,9 @@
                                     </div>
                                 </div>
                             </a>
-                            <button type="button" class="mt-auto w-full bg-sky-800 text-white py-2 rounded hover:bg-indigo-700 transition cursor-pointer">
+                            <a href="/cart/add?productId={{ product.id }}&quantity=1" class="mt-auto w-full text-center bg-sky-800 text-white py-2 rounded hover:bg-indigo-700 transition cursor-pointer">
                                 Dodaj do koszyka
-                            </button>
+                            </a>
                         </div>
                     {% else %}
                         <p class="text-center text-gray-500">Brak produktów do wyświetlenia.</p>
